<resources>
    <string name="app_name">Post It!</string>
    <string name="loading">Loading...</string>
    <string name="error_message">There was an error while retrieving the data, tap to try again</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut hendrerit nisl nec vulputate vestibulum. Pellentesque luctus finibus purus. Praesent ut ante luctus, ullamcorper felis ut, bibendum justo. Praesent facilisis nunc lacinia laoreet mattis. Integer nulla nibh, cursus non vehicula at, consectetur tincidunt nunc. Vestibulum fringilla, leo ut tempus iaculis, metus ante gravida libero, sit amet condimentum velit arcu at eros. Proin nec turpis sed enim consectetur accumsan. Integer posuere enim ut dapibus consequat. Nunc nec justo arcu. Cras tristique vehicula accumsan. Phasellus aliquam efficitur magna sed consequat. Aliquam pharetra lacus nec eleifend dapibus. Aliquam auctor, libero ut fermentum lacinia, est sem facilisis dolor, id molestie velit sapien nec sem. Phasellus quis aliquam est.</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="send">Send</string>
    <string name="comment_hint">Add a comment…</string>
</resources>
