<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
    <android.support.constraint.ConstraintLayout
            android:id="@+id/detail_content_layout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/margin_items"

            android:focusableInTouchMode="true"
        >

        <TextView
                android:id="@+id/post_title"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"

                tools:text="@string/title"

                android:textStyle="bold"
        />

        <TextView
                android:id="@+id/post_content"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/post_title"

                tools:text="@string/lorem_ipsum"
        />

        <android.support.v7.widget.RecyclerView
                android:id="@+id/comments_list"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/post_content"

                android:layout_marginTop="@dimen/margin_items"
        />

        <TextView
                android:id="@+id/detail_error"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/error_message"

                android:gravity="center"
                android:padding="@dimen/error_padding_large"

                app:layout_constraintTop_toBottomOf="@id/post_content"

                android:layout_marginTop="@dimen/margin_items"

                android:visibility="gone"

        />

        <EditText
                android:id="@+id/new_comment_input"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@id/comments_list"
                android:hint="@string/comment_hint"

                android:layout_marginTop="@dimen/margin_items"
        />

        <Button
                android:id="@+id/send_comment_btn"

                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="@fraction/button_send_percentage_width"

                android:text="@string/send"

                app:layout_constraintTop_toBottomOf="@id/new_comment_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:layout_marginTop="@dimen/margin_items"
        />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
